# python-webui-testing

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  renovate.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: pytest.yml
pages/: result.py  search.py
tests/: conftest.py  test_math.py  test_web.py
