[project]
name = "python-webui-testing"
version = "0.0.1"
requires-python = "==3.14.6"
dependencies = []

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "selenium==4.44.0",
    "black==26.5.1",
    "pytest-bdd==8.1.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
